# igait-backend

./: .dockerignore  .env.example  .envrc  .gitignore  .gitmodules  Cargo.toml  DOCKER.md  Dockerfile  MICROSERVICES_MIGRATION.md  README.md  _Cargo.toml  crates.js  database.rules.json  docker-compose.yml  firebase.json  firestore.rules  flake.nix  help.html  index.html  install.sh  settings.html  src-files.js  test.sh  test_stage1.sh  test_upload.sh
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link  flake-profile-5-link  flake-profile-6-link
.github/: copilot-instructions.md  copilot-technologies.md
data/: db.json  run_inference.py
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
igait-backend/: Cargo.toml  Dockerfile  README.md
igait-backend/docs/igait_backend/: all.html  constant.ASD_CLASSIFICATION_THRESHOLD.html
igait-backend/docs/igait_backend/daemons/: index.html  sidebar-items.js
igait-backend/docs/igait_backend/daemons/filesystem/: fn.work_outputs.html  index.html
igait-backend/docs/igait_backend/helper/: index.html
igait-backend/docs/igait_backend/helper/database/: struct.Database.html
igait-backend/docs/igait_backend/helper/email/: fn.send_success_email.html  index.html
igait-backend/docs/igait_backend/helper/lib/: fn.get_bearer_token.html  struct.AppState.html  struct.JobStatus.html  struct.User.html
igait-backend/docs/igait_backend/helper/metis/: constant.METIS_INPUTS_DIR.html  constant.METIS_OUTPUTS_DIR.html  constant.METIS_OUTPUT_NAME.html  constant.METIS_PBS_PATH.html  fn.delete_logfile.html  fn.delete_output_folder.html  fn.metis_output_exists.html  fn.metis_qsub.html
igait-backend/docs/igait_backend/routes/: sidebar-items.js
igait-backend/docs/igait_backend/routes/assistant/: fn.assistant_entrypoint.html  fn.assistant_proxied_entrypoint.html  fn.handle_proxied_socket.html  fn.handle_proxied_socket_helper.html  fn.send_response.html  sidebar-items.js  struct.SearchJobArguments.html
igait-backend/docs/igait_backend/routes/contribute/: fn.contribute_entrypoint.html  fn.unpack_contribute_arguments.html  index.html  struct.ContributeRequestArguments.html
igait-backend/docs/igait_backend/routes/historical/: fn.get_email_and_pdf_link.html
igait-backend/docs/igait_backend/routes/upload/: fn.save_upload_files.html  fn.unpack_upload_arguments.html  fn.upload_entrypoint.html  struct.UploadRequestArguments.html
igait-backend/docs/search.desc/igait_backend/: igait_backend-desc-0-.js
igait-backend/docs/src/igait_backend/daemons/: mod.rs.html
igait-backend/docs/src/igait_backend/helper/: database.rs.html  lib.rs.html  metis.rs.html
igait-backend/docs/src/igait_backend/routes/: contribute.rs.html  historical.rs.html  upload.rs.html
igait-backend/docs/trait.impl/core/cmp/: trait.PartialEq.js
igait-backend/docs/trait.impl/core/convert/: trait.From.js
igait-backend/docs/trait.impl/core/marker/: trait.Freeze.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
igait-backend/docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
igait-backend/scripts/: cudaMPI  pipeline.pbs
igait-backend/scripts/Model/: ASD_Classifier_Model.h5
igait-backend/src/: main.rs
igait-backend/src/docs/: home.md  testing.md
igait-backend/src/helper/: database.rs  email.rs  lib.rs  metis.rs  mod.rs
igait-backend/src/routes/: assistant.rs  contribute.rs  files.rs  historical.rs  internal.rs  mod.rs  pipeline.rs  rerun.rs  upload.rs  webhook.rs
igait-cycle-detection-stage/: Cargo.toml  Dockerfile
igait-frontend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
igait-lib/: Cargo.toml
igait-lib/src/: lib.rs
igait-lib/src/microservice/: backend_status.rs  email.rs  mod.rs  queue.rs  server.rs  storage.rs  types.rs  worker.rs
igait-media-conversion-stage/: Cargo.toml  Dockerfile
igait-media-conversion-stage/src/: main.rs
igait-pipeline/: Cargo.toml  output.json  pipeline.pbs  test.sh
igait-pipeline/assets/stage_1/: Makefile  cudaMPI  cudaMPI.cu
igait-pipeline/assets/stage_6/: main.py  requirements.txt
igait-pipeline/src/: main.rs
igait-pipeline/src/stages/: mod.rs  s1_media_conversion.rs  s2_validity_check.rs  s3_reframing.rs  s4_pose_estimation.rs  s5_cycle_detection.rs  s6_prediction.rs  s7_archive.rs
igait-pose-estimation-stage/: Cargo.toml  Dockerfile
igait-prediction-stage/: Cargo.toml  Dockerfile
igait-reframing-stage/: Cargo.toml  Dockerfile
igait-stages/igait-stage1-media-conversion/: Cargo.toml  Dockerfile
igait-stages/igait-stage1-media-conversion/src/: main.rs
igait-stages/igait-stage2-validity-check/: Cargo.toml  Dockerfile
igait-stages/igait-stage2-validity-check/src/: main.rs
igait-stages/igait-stage3-reframing/: Cargo.toml  Dockerfile
igait-stages/igait-stage3-reframing/src/: main.rs
igait-stages/igait-stage4-pose-estimation/: .dockerignore  Cargo.toml  Dockerfile
igait-stages/igait-stage4-pose-estimation/src/: main.rs
igait-stages/igait-stage5-cycle-detection/: .dockerignore  Cargo.toml  Dockerfile
igait-stages/igait-stage5-cycle-detection/src/: main.rs
igait-stages/igait-stage6-prediction/: Cargo.toml  Dockerfile
igait-stages/igait-stage6-prediction/src/: main.rs
igait-stages/igait-stage7-finalize/: Cargo.toml  Dockerfile
igait-stages/igait-stage7-finalize/src/: main.rs
igait-stages/stage3-reframing/: Cargo.toml
igait-stages/stage3-reframing/src/: main.rs
igait-stages/stage4-pose-estimation/: Cargo.toml
igait-stages/stage4-pose-estimation/src/: main.rs
igait-stages/stage6-prediction/: Cargo.toml
igait-stages/stage6-prediction/src/: main.rs
igait-validity-check-stage/: Cargo.toml  Dockerfile
igait-web/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package.json  vite.config.ts
igait_backend/: all.html  constant.ASD_CLASSIFICATION_THRESHOLD.html  constant.DISABLE_RESULT_EMAIL.html  fn.main.html  index.html  sidebar-items.js
igait_lib/: all.html  enum.StageStatus.html  index.html  (+6 more)
(+581 files in other folders)
