[workspace]
resolver = "3"
members = [
    "igait-lib",
    "igait-backend",
    
    # Stage microservices
    "igait-media-conversion-stage",
    "igait-validity-check-stage",
    "igait-reframing-stage",
    "igait-pose-estimation-stage",
    "igait-cycle-detection-stage",
    "igait-prediction-stage",
]

[workspace.dependencies]
# Core
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
zip = "2"

# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json"] }

# Internal
igait-lib = { path = "./igait-lib", features = ["microservice"] }
