[package]
name = "igait-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true }
chrono = { workspace = true }
igait-lib = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Backend-specific dependencies
async-openai = { git = "https://github.com/hiibolt/async-openai.git" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1"
chrono-tz = "0.10"
dotenv = "0.15"
firebase-auth = { version = "0.5", features = ["axum"] }
firebase-rs = "2"
futures-util = "0.3"
rand = "0.8"
time-util = { version = "0.3", features = ["chrono", "serde"] }
tokio-tungstenite = "0.24"
