[package]
name = "igait-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "igait-backend"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow = { version = "1", features = ["backtrace"] }
axum = { version = "0.7", features = ["multipart", "ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
igait-lib = { path = "../igait-lib", features = ["microservice", "email"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Backend-specific dependencies
async-openai = { git = "https://github.com/hiibolt/async-openai.git" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1"
chrono-tz = "0.10"
dotenv = "0.15"
firebase-auth = { version = "0.5", features = ["axum"] }
firebase-rs = "2"
futures-util = "0.3"
rand = "0.8"
time-util = { version = "0.3", features = ["chrono", "serde"] }
tokio-tungstenite = "0.24"
