[package]
name = "igait-stage5-cycle-detection"
version = "0.1.0"
edition = "2021"
description = "Stage 5: Gait cycle detection microservice for iGait pipeline"

[dependencies]
igait-lib = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
