[package]
name = "igait-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "igait_lib"
path = "src/lib.rs"

[features]
default = []
# Enable microservice functionality (Axum server, storage clients, etc.)
microservice = ["axum", "tokio", "tokio-util", "reqwest", "tower-http", "aws-sdk-s3", "aws-config"]
# Enable email functionality (AWS SES)
email = ["aws-sdk-sesv2", "aws-config", "tokio", "chrono-tz"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", optional = true }

# Optional: Microservice dependencies
axum = { version = "0.7", features = ["multipart", "ws"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-sdk-sesv2 = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }