[package]
name = "igait-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3"
dotenv = "0.15"
igait-lib = { path = "../igait-lib" }
reqwest = { version = "0.12", features = ["multipart", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
walkdir = "2.5"
zip = "2.2"
