[package]
name = "igait-stage1-media-conversion"
version = "0.1.0"
edition = "2021"
description = "Stage 1: Media conversion microservice for iGait pipeline"

[[bin]]
name = "igait-stage1-media-conversion"
path = "src/main.rs"

[dependencies]
igait-lib = { path = "../../igait-lib", features = ["microservice"] }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
