[package]
name = "igait-stage2-validity-check"
version = "0.1.0"
edition = "2021"
description = "Stage 2: Validity check microservice for iGait pipeline"

[dependencies]
igait-lib = { path = "../../igait-lib", features = ["microservice"] }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
