[package]
name = "igait-stage4-pose-estimation"
version = "0.1.0"
edition = "2021"
description = "Stage 4: Pose estimation microservice for iGait pipeline"

[[bin]]
name = "igait-stage4-pose-estimation"
path = "src/main.rs"

[dependencies]
igait-lib = { path = "../../igait-lib", features = ["microservice"] }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
