[package]
name = "igait-stage5-cycle-detection"
version = "0.1.0"
edition = "2021"
description = "Stage 5: Gait cycle detection microservice for iGait pipeline"

[[bin]]
name = "igait-stage5-cycle-detection"
path = "src/main.rs"

[dependencies]
igait-lib = { path = "../../igait-lib", features = ["microservice"] }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
