[package]
name = "igait-stage7-finalize"
version = "0.1.0"
edition = "2021"
description = "Stage 7: Finalize microservice for iGait pipeline - sends emails and archives results"

[dependencies]
igait-lib = { path = "../../igait-lib", features = ["microservice", "email"] }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
