[package]
name = "igait-stage4-pose-estimation"
version = "0.1.0"
edition = "2021"
description = "Stage 4: Pose estimation microservice for iGait pipeline"

[dependencies]
igait-lib = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
